<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Locker</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="locker">LOCKER</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="see_all">See All</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
</resources>