<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greycurves"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_below="@+id/buttonSeeAll"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/curved_butts_my_grey"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonSeeAll"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_below="@+id/buttonSearch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/curved_butts_my_grey"
        android:text="@string/see_all"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_below="@+id/buttonDelete"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/curved_butts_my_grey"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/curved_butts_my_grey"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textLocker"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="93dp"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:text="@string/locker"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_below="@+id/textLocker"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/curved_butts_my_grey"
        android:text="@string/add"

        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic" />

</RelativeLayout>